--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="imagem_do_evento">Imagem do evento</string>
     <string name="icone_inscritos">icone inscritos</string>
+    <string name="channel_name">Principal</string>
+    <string name="channel_description">Apresentacao de todos os eventos</string>
 </resources>
